--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,6 @@ jobs:
     - uses: actions/checkout@v2
     - name: Run Django unit tests
       run: |
-        pip instal --user django
+        pip install --user django
         python manage.py test
 
